chage index.html and add wave.png

--- a/index.html
+++ b/index.html
@@ -1,9 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Flutuar.com</title>
   </head>
-  <body></body>
+  <body>
+    <div id="main">
+      <img src="./assets/img1.png" alt="imagem de uma mulher inserindo pontos no globo terrestre." />
+      <p>O seu próximo <span>destino</span> pode estar aqui...</p>
+      <p>
+        Aqui você encontra uma seleção de <strong>pacotes completos</strong> para as suas férias!
+        <br />
+        Na Flutuar você encontra pacotes de viagens nacionais e internacionais que incluem: passagens aéreas, hotéis, café da manhã, e até seguro
+        viagem com <strong>preços arrasadores!</strong>
+      </p>
+      <p>Se você ainda não tem um destino definido, confira nossa seção de ofertas.</p>
+    </div>
+    <footer>
+      <div id="line"></div>
+      <a href="#">Destinos</a>
+      <a href="#">Ofertas</a>
+      <a href="#">Contato</a>
+      <div id="wave"></div>
+    </footer>
+  </body>
 </html>
