finish index and style, create favicon

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Flutuar.com</title>
+    <link rel="shortcut icon" href="./assets/favicon.svg" type="image" />
     <link rel="stylesheet" href="style.css" />
     <link href="https://fonts.googleapis.com/css2?family=Dosis&family=Open+Sans&display=swap" rel="stylesheet" />
   </head>
@@ -17,8 +18,8 @@
         Aqui você encontra uma seleção de <strong>pacotes completos</strong> para as suas férias!
         <br />
         <br />
-        Na Flutuar você encontra pacotes de viagens nacionais e internacionais que incluem: passagens aéreas, hotéis, café da manhã, e até seguro
-        viagem com <strong>preços arrasadores!</strong>
+        Na <strong id="logo">Flutuar</strong> você encontra pacotes de viagens nacionais e internacionais que incluem: passagens aéreas, hotéis, café
+        da manhã, e até seguro viagem com <strong>preços arrasadores!</strong>
       </p>
       <p>Se você ainda não tem um destino definido, confira nossa seção de ofertas.</p>
     </div>
